smallalignment issues

--- a/src/app/pages/add-data/add-data.component.css
+++ b/src/app/pages/add-data/add-data.component.css
@@ -10,3 +10,8 @@ form{
 ng-select{
     width: 200px;
 }
+.Actual-align{
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+}
