--- a/src/app/pages/calender/calender.component.css
+++ b/src/app/pages/calender/calender.component.css
@@ -117,10 +117,10 @@ background: lightblue;
  margin-bottom: 100px;
 }
 
-.top_container{
-  padding: 20px;
+/* .top_container{
+
  
-}
+} */
 
 .scroll-bar2{
         
